--- a/OFFERS-379/ro-2/index.html
+++ b/OFFERS-379/ro-2/index.html
@@ -275,17 +275,17 @@
 			</div>
 		
 			<div class="rev_item clearfix">
-				<img src="img/rev4.jpg" alt class="img-wid">
+				<img src="img/rev3.jpg" alt class="img-wid">
 				<div class="text">
 					<span> VICTOR PLEȘCA</span>
-					<p> Magazin bun, bunuri utile, livrare rapidă. Am comandat o mulțime de lucruri de la ei, recomand mult banda de izolare. Am izolat cu ea îmbinarea dintre baie și perete, nimic nu se scurge și nici semn acum de mucegai . Recomand magazinul! </p>
+					<p>Magazin bun, bunuri utile, livrare rapidă. Am comandat o mulțime de lucruri de la ei, recomand mult banda de izolare. Am izolat cu ea îmbinarea dintre baie și perete, nimic nu se scurge și nici semn acum de mucegai . Recomand magazinul! </p>
 				</div>
 			</div>
 			<div class="rev_item clearfix">
-				<img src="img/rev5.jpg" alt class="img-wid">
+				<img src="img/rev4.jpg" alt class="img-wid">
 				<div class="text">
 					<span> ILIE CIOBANU</span>
-					<p> Magazinul este minunat! Livrare rapidă, produse de înaltă calitate și promoții constante. Am comandat o bandă izolatoare și am decis să încerc un nou produs, Body Compound pentru lustruit, care sa dovedit a fi un produs grozav, am lustruit tot metalul din casă și mașina soției mele, totul pare nou. Recomand magazinul!</p>
+					<p>Magazinul este minunat! Livrare rapidă, produse de înaltă calitate și promoții constante. Am comandat o bandă izolatoare și am decis să încerc un nou produs, Body Compound pentru lustruit, care sa dovedit a fi un produs grozav, am lustruit tot metalul din casă și mașina soției mele, totul pare nou. Recomand magazinul!</p>
 				</div>
 			</div>
 		</div>
@@ -293,6 +293,7 @@
 	<section class="sect5" id="result">
 		<h2 class="title separ"> GALERIE</h2>
 		<div class="result_list owl-carousel">
+			<img src="img/result1.jpg" alt class="img-wid">
 			<img src="img/result2.jpg" alt class="img-wid">
 			<img src="img/result3.jpg" alt class="img-wid">
 			<img src="img/result4.jpg" alt class="img-wid">
@@ -317,7 +318,7 @@
 	</section>
 	<footer class="footer_section">
 		<center style="color: white">
-			<span> HOME GOODS LTD., Strada Grădiștea 4, București 077120, Romania</span>
+			<span>HOME GOODS LTD., Strada Grădiștea 4, București 077120, Romania</span>
 			<br> <a href="/privacypolicy" target="_blank"> Privacy policy</a>
 			<br> <a href="/general-conditions-of-sale" target="_blank"> General conditions of sale</a>
 			<br> <a href="/legal-warning" target="_blank"> Legal warning</a>
