--- a/OFFERS-379/CY/index.html
+++ b/OFFERS-379/CY/index.html
@@ -230,6 +230,41 @@
 						<a data-fancybox class="button order" href="#order_form"> ΑΝΑΛΥΤΙΚΑ</a>
 					</div>
 				</div>
+				<div class="prod_item">
+					<div class="img">
+						<img src="img/prod9_1.jpg" alt>
+						<img src="img/prod9_2.jpg" alt>
+					</div>
+					<div class="description">
+						<div class="text">
+							<p class="prod_name">LEATHER KIT PRO</p>
+							<div class="price">
+								<div class="old"><span>
+										<x-oldprice> 98</x-oldprice>
+									</span><small>
+										<x-currency> € </x-currency>
+									</small></div>
+								<div class="new"><span>
+										<x-newprice> 49</x-newprice>
+									</span><small>
+										<x-currency> € </x-currency>
+									</small> </div>
+							</div>
+							<div class="prod_description">Leather kit pro - είναι μια νέα πρωτοποριακή ουσία για την επισκευή δερμάτινων προϊόντων, καθώς και προϊόντων από δερματίνη και όλων των τύπων δερματίνης. Είναι μια ουσία που μοιάζει με κόλλα, η οποία εφαρμόζεται σε κατεστραμμένες περιοχές και όταν στεγνώσει τους προσδίδει την αρχική τους εμφάνιση. Αυτό το προϊόν δεν απαιτεί θερμική επεξεργασία (ξήρανση, θέρμανση), υψηλή αντοχή και πλαστικότητα, δεν ξεφλουδίζει μετά το στέγνωμα. Ένα σετ περιλαμβάνει 7 βαζάκια διαφορετικών χρωμάτων (μαύρο, λευκό, κόκκινο, μπλε, πράσινο, καφέ, κίτρινο) <br> <br> Leather kit pro επιδιορθώνει με ευκολία: <ul>
+									<li>Διαφάνειες από μακροχρόνια χρήση</li>
+									<li>Σκισίματα.</li>
+									<li>Ρωγμές</li>
+									<li>Τρύπες</li>
+									<li>Γρατζουνιές</li>
+									<li>Και άλλα ελαττώματα!</li>
+								</ul>
+							
+
+							</div>
+						</div>
+						<a data-fancybox class="button order" href="#order_form"> ΑΝΑΛΥΤΙΚΑ</a>
+					</div>
+				</div>
 			
 				<!-- /item -->
 			</div>
@@ -265,22 +300,21 @@
 				<img src="img/rev1.jpg" alt class="img-wid">
 				<div class="text">
 					<span>ΟΛΓΑ ΕΛΕΥΘΕΡΙΟΥ</span>
-					<p>Αγόρασα πολλά χρήσιμα πράγματα εδώ, μου άρεσε πολύ stove screen η προστατευτική οθόνη υψηλής ποιότητας και χρήσιμη, επίσης πήρα υγρό δέρμα, επισκεύασα την τσάντα και τα παπούτσια, η ζημιά δεν είναι καθόλου αισθητή. Σας ευχαριστώ.</p>
+					<p>Αγόρασα πολλά χρήσιμα πράγματα εδώ, μου άρεσε πολύ το stove screen, η υψηλής ποιότητας και τρομερά χρήσιμη προστατευτική οθόνη. Επίσης πήρα και το υγρό δέρμα, επισκεύασα την τσάντα και τα παπούτσια μου, φαινονται ολα σαν καινούργια. Σας ευχαριστώ.</p>
 				</div>
 			</div>
 			<div class="rev_item clearfix">
 				<img src="img/rev2.jpg" alt class="img-wid">
 				<div class="text">
 					<span>ΓΡΗΓΟΡΗΣ ΛΑΓΟΥΤΑΡΗΣ</span>
-					<p> Ωραίο κατάστημα, χρήσιμα προϊόντα, γρήγορη παράδοση. Παραγγέλνω πολλά από αυτό, συνιστώ ανεπιφύλακτα το Isolation Tape και το υγρό δέρμα. Επιδιορθώθηκαν δερμάτινες καρέκλες και τελικά σφράγισε την ένωση μεταξύ του μπάνιου και του τοίχου, τίποτα άλλο δεν διαρρέει και κανένα ίχνος μούχλας. Συνιστώ το κατάστημα! </p>
+					<p>Ωραίο κατάστημα, χρήσιμα προϊόντα, γρήγορη παράδοση. Παραγγέλνω πολλά από αυτό, συνιστώ ανεπιφύλακτα το Isolation Tape και το υγρό δέρμα. Επιδιορθώθηκαν δερμάτινες καρέκλες και επιτέλους σφράγισα την ένωση μεταξύ του μπάνιου και του τοίχου, τέλος οι διαρροές και κανένα ίχνος μούχλας. Προτείνω το κατάστημα! </p>
 				</div>
 			</div>
 			<div class="rev_item clearfix">
 				<img src="img/rev3.jpg" alt class="img-wid">
 				<div class="text">
 					<span>ΠΕΓΚΥ ΑΘΑΝΑΣΙΟΥ</span>
-					<p>Σας ευχαριστώ πολύ για το καθαριστικό Vclean Spot! Πώς ζούσα χωρίς αυτό;! Καθάρισα όλο το διαμέρισμα, ακόμη και τους παλαιότερους λεκέδες εξαφάνισε, τώρα θα χρησιμοποιήσω μόνο αυτό. Συμβουλεύω σε όλους!
-					</p>
+					<p>Σας ευχαριστώ πολύ για το καθαριστικό Vclean Spot! Πώς ζούσα χωρίς αυτό τόσα χρόνια;! Καθάρισα όλο το διαμέρισμα, εξαφάνισε ακόμη και τους πιο παλιούς λεκέδες, τώρα θα χρησιμοποιώ μόνο αυτό. Προτείνω σε κάθε νοικοκυρά!</p>
 				</div>
 			</div>
 			<div class="rev_item clearfix">
