--- a/OFFERS-379/ro-2/index.html
+++ b/OFFERS-379/ro-2/index.html
@@ -329,7 +329,7 @@
 		<div class="flex">
 			<div class="left"><img src="img/prod1_1.jpg" alt class="img-wid">
 				<p class="prod_name"><span> Майка</span></p>
-				<div class="price">
+				<div class="prod_price">
 					<div class="old"><span>
 							<x-oldprice> 98</x-oldprice>
 						</span><small>
